AFOMS-10 Invalid Login + AFOMS-9 Register + AFOMS-15 Verify user creditals

--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.onlinestore/com.example.onlinestore.LoginApplication</mainClass>
+                            <mainClass>com.example.onlinestore/com.example.onlinestore.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
